# ComfyUI

./: .gitignore  .gitmodules  models  pyproject.toml
config/: gender_words_config.yaml
custom_nodes/cg-image-filter/: README.md  __init__.py  image_filter.py  list_utility_nodes.py  pyproject.toml  string_utility_nodes.py
custom_nodes/cg-image-filter/js/: floating_window.js  image_filter.js  popup.js
