[project]
name = "ComfyUI"
version = "0.7.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchsde",
  "torchvision",
  "torchaudio",
  # "flash-attn",
  "triton; sys_platform == 'linux'",
  "triton-windows; sys_platform == 'win32'",
  #
  "comfyui-frontend-package==1.35.9",
  "comfyui-workflow-templates==0.7.64",
  "comfyui-embedded-docs==0.3.1",
  "numpy>=1.26.4",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "pillow>=10.3.0",
  "scipy>=1.11.4",
  "tqdm",
  "psutil",
  "alembic",
  "sqlalchemy",
  "av>=14.2.0",
  # non essential dependencies:
  "kornia>=0.7.1",
  "spandrel",
  "soundfile",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  # ComfyUI-KJNodes
  "color-matcher>=0.6.0",
  "matplotlib>=3.9.4",
  "huggingface-hub>=0.33.1",
  "mss>=10.0.0",
  "opencv-python>=4.7.0.72",
  # ComfyUI-Impact-Pack & Subpack
  "split",
  "segment-anything",
  "scikit-image",
  "piexif",
  "opencv-python-headless",
  "dill",
  "sam-2",
  "ultralytics>=8.3.162",
  # ComfyUI-Gallery
  "watchdog",
  "asyncio",
  # comfyui_controlnet_aux
  "importlib-metadata",
  "filelock",
  "python-dateutil",
  "mediapipe; python_version<='3.12'",
  "svglib",
  "fvcore",
  "yapf",
  "omegaconf",
  "ftfy",
  "addict",
  "yacs",
  "trimesh[easy]",
  "albumentations",
  "scikit-learn",
  "onnxruntime-gpu>=1.22.0",
  # ComfyUI-Crystools
  "deepdiff",
  "pynvml ; platform_machine != 'aarch64'",
  "py-cpuinfo",
  # ComfyUI-Lora-Manager
  "jinja2>=3.1.6",
  "olefile>=0.47",
  "toml>=0.10.2",
  "natsort>=8.4.0",
  "gitpython>=3.1.45",
  "aiosqlite",
  "beautifulsoup4",
  # RES4LYF
  "pywavelets>=1.8.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
flash-attn = [
  { path = "C:/opt/wheels/flash_attn-2.8.2+cu128-cp313-cp313-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
sam-2 = { git = "https://github.com/facebookresearch/sam2" }

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu130"
url      = "https://download.pytorch.org/whl/cu130"
explicit = true
