[project]
name = "ComfyUI"
version = "0.8.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "comfyui-frontend-package==1.35.9",
  "comfyui-workflow-templates==0.7.67",
  "comfyui-embedded-docs==0.3.1",
  "torch",
  "torchsde",
  "torchvision",
  "torchaudio",
  "numpy>=1.26.4",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow>=10.3.0",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "sqlalchemy",
  "av>=14.2.0",
  "comfy-kitchen>=0.2.3",
  # non essential dependencies:
  "kornia>=0.7.1",
  "spandrel",
  "soundfile",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "triton; sys_platform == 'linux'",
  "triton-windows; sys_platform == 'win32'",
  # comfyui_controlnet_aux
  "importlib-metadata",
  "huggingface-hub",
  "opencv-python-headless>=4.7.0.72",
  "filelock",
  "pillow>=10.3.0",
  "scikit-image",
  "python-dateutil",
  "mediapipe; python_version<='3.12'",
  "fvcore",
  "yapf",
  "omegaconf",
  "ftfy",
  "addict",
  "yacs",
  "trimesh[easy]",
  "albumentations",
  "scikit-learn",
  "matplotlib",
  "onnxruntime-gpu>=1.22.0",
  # ComfyUI-Crystools
  "deepdiff",
  "pynvml ; platform_machine != 'aarch64'",
  "py-cpuinfo",
  "piexif",
  # ComfyUI-Gallery
  "watchdog",
  "asyncio",
  # ComfyUI-Impact-Pack & Subpack
  "segment-anything>=1.0",
  "dill>=0.4.0",
  "sam-2",
  "ultralytics>=8.3.162",
  # ComfyUI-KJNodes
  "color-matcher",
  "mss",
  # ComfyUI-Lora-Manager
  "jinja2",
  "olefile",
  "toml",
  "natsort",
  "GitPython",
  "aiosqlite",
  "beautifulsoup4",
  "platformdirs",
  # RES4LYF
  # "opencv-python>=4.11.0.86",
  "pywavelets>=1.8.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
sam-2 = { git = "https://github.com/facebookresearch/sam2" }

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu130"
url      = "https://download.pytorch.org/whl/cu130"
explicit = true
